# miniJVM

./: .gitignore  CMakeLists.txt  LICENSE  README.md  conanfile.txt
.github/workflows/: build-and-tests.yml
class_dump/: CMakeLists.txt
class_dump/src/: main.cpp
cmake/: conan.cmake  docs.cmake  fmt.cmake  lyra.cmake  project_settings.cmake  spdlog.cmake  testing.cmake
jvm/: CMakeLists.txt
jvm/src/: main.cpp
minijvm/: CMakeLists.txt
minijvm/include/jvm/: utils.hpp
minijvm/include/jvm/bytecode/: bytecode.hpp
minijvm/include/jvm/bytecode/simple/: basic.hpp  forward.hpp  stack_push_constant.hpp  stack_push_local_var.hpp  store_variable_from_stack_as_local.hpp
minijvm/include/jvm/execution/: context.hpp  execution.hpp  frame.hpp  instructions.hpp  stack.hpp
minijvm/include/jvm/execution/instructions/: forward.hpp  int_ops.hpp  invoke.hpp  misc.hpp  return.hpp  stack_load_const.hpp  stack_load_const_pool.hpp  stack_load_local.hpp
minijvm/include/jvm/object/: object.hpp
minijvm/include/jvm/types/: basic.hpp  class.hpp  class_instance.hpp  const_pool.hpp  frame.hpp  serialization.hpp
minijvm/include/jvm/types/class/: attribute.hpp  base.hpp  class_field.hpp  field.hpp  method.hpp
minijvm/include/jvm/utils/: ref.hpp
minijvm/src/bytecode/: bytecode.cpp
minijvm/src/bytecode/simple/: basic.cpp  stack_push_constant.cpp
minijvm/src/execution/: instructions.cpp  instructions.test.cpp
minijvm/src/execution/instructions/: int_ops.test.cpp  invoke.cpp  misc.cpp  misc.test.cpp  return.cpp  stack_const_load.test.cpp  stack_load_const.cpp  stack_load_const.test.cpp  stack_load_const_pool.cpp  stack_load_local.cpp
minijvm/src/types/: basic.cpp  class.cpp  const_pool.cpp
minijvm/src/types/class/: attribute.unit.cpp  class_field.cpp  field.cpp  method.cpp
minijvm/src/utils/: ref.unit.cpp
src/: CMakeLists.txt  main.cpp
src/class_dump/: CMakeLists.txt  main.cpp
src/jvm/: CMakeLists.txt  main.cpp
src/jvmlib/: CMakeLists.txt  loader.cpp  loader.hpp  types.hpp
src/jvmlib/types/: basic.hpp  basic_formating.hpp  class.cpp  class.hpp  const.hpp  const_pool.cpp  const_pool.hpp  const_pool_formating.hpp  const_pool_validation.hpp  serialization.hpp
src/jvmlib/types/class/: attribute.hpp  attribute.unit.cpp  base.hpp  field.hpp  method.hpp
src/jvmlib/utils/: ref.hpp  ref.unit.cpp  resolve.hpp
src/minijvm/: CMakeLists.txt  utils.hpp
src/minijvm/types/: basic.hpp  const_pool.cpp  serialization.hpp
src/minijvm/types/class/: attribute.hpp  class_field.hpp  method.hpp
src/minijvm/utils/: ref.unit.cpp
src/utility/: CMakeLists.txt
src/utility/error/: error.hpp
tests/: CMakeLists.txt
tests/ref/: .empty
tests/src/: Add.java  Factorial.java  FactorialMain.java  Parrot.java  TestFuncCall.java
